<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".o3">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="153dp"
            android:layout_height="123dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.089" />

        <TextView
            android:id="@+id/q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/q33"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/rg3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/q3"
            app:layout_constraintTop_toBottomOf="@+id/q3">

            <RadioButton
                android:id="@+id/rbq31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vs_code" />

            <RadioButton
                android:id="@+id/rbq32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_studio" />

            <RadioButton
                android:id="@+id/rbq33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pycharam" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>